<resources>
    <string name="app_name">VAMS</string>
    <string name="language_spinner_title">Select Language</string>
    <string name="welcome">WELCOME!</string>
    <string name="hint_email">Username</string>
    <string name="hint_password">Password</string>
    <string name="no_internet_msg">Please Check Your Internet Connection</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_signin">Sign in</string>
    <string name="powered_by">Powered By</string>
    <string name="version">v 4.0.1</string>
    <string name="confirmAppointment">HAVE A CONFIRMED APPOINTMENT?</string>
    <string name="hint_scanidcard">Scan ID Card</string>
    <string name="OR">OR</string>
    <string name="hint_visitormobile">Enter Visitor Cell Number OR Email Id</string>
    <string name="hint_visitormobileactivity">Enter Visitor Cell Number </string>
    <string name="btn_next">Next</string>
    <string name="btn_visitorbadge">Print Visitor Badge</string>
    <string name="contract">Contractor Entry</string>
    <string name="visitorentry">Visitor Entry</string>
    <string name="visitorlogout">Visitor Check-Out</string>
    <string name="scanner">Scanner</string>
    <string name="hint_complexname">Complex Name</string>
    <string name="hint_tenantName">Tenant Name</string>
    <string name="hint_buildingName">Building Name</string>
    <string name="entervisitormobile">ENTER CELL NUMBER</string>
    <string name="entervisitoremail">ENTER EMAIL ID</string>
    <string name="hint_mobileNo">Cell Number</string>
    <string name="scanidcard">SCAN ID CARD</string>
    <string name="bypass">Bypass</string>
    <string name="submit">Submit</string>
    <string name="idProof">ID Proof</string>
    <string name="firstimage">First Image</string>
    <string name="lastimage">Last Image</string>
    <string name="selfhelp_kiosk">Self-Help kiosk</string>
    <string name="reception">Reception</string>
    <string name="captureid">CAPTURE ID PROOF</string>
    <string name="visitorName">Visitor Name</string>
    <string name="company">Visitor Company</string>
    <string name="emailId">Visitor Email Id</string>
    <string name="contact">Contact No</string>
    <string name="typeofvisitor">Type Of Visitor</string>
    <string name="persontomeet">Host To Meet</string>
    <string name="purposeofvisit">Purpose of Visit</string>
    <string name="official">Official</string>
    <string name="personal">Personal</string>
    <string name="accesscardno">Badge Number</string>
    <string name="Selectid">Select ID Type</string>
    <string name="cardno">Card Number</string>
    <string name="vehicleno">Vehicle Number</string>
    <string name="nationalIdNo">National ID No</string>
    <string name="mrzNo">MRZ No</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nationality">Nationality</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="dateofexpiry">Date of Expiry</string>
    <string name="personalremark">Personal Remarks</string>
    <string name="authenticatioKey">Authentication Key</string>
    <string name="resendotp">Re-send Key</string>
    <string name="username">Username</string>
    <string name="confirm">Confirm</string>
    <string name="i_agree">I Agree</string>
    <string name="search">Search</string>
    <string name="enterPassword">Password</string>
    <string name="cancel">Cancel</string>
    <string name="error_login">Invalid Email</string>
    <string name="errorMessageLoginId">Username Is Required</string>
    <string name="errorMessageLoginIdOne">Username Must Be Greater Than 6 Digits</string>
    <string name="loginId">Rahulkadge12@gmail.com</string>
    <string name="password">1Ab@ra</string>
    <string name="error_password">Invalid Password</string>
    <string name="emailRequired">Sign In Id Required</string>
    <string name="passwordRequired">Password Is Required</string>
    <string name="invalidPassword">Invalid Password</string>
    <string name="mobileRequired">Cell No Required</string>
    <string name="questionlist">Question List</string>
    <string name="invalidMobile">Invalid Cell No</string>
    <string name="no_internet_msg_text">Internet connection is not available. Please check and try again later </string>
    <string name="hint_emailaddress">Email</string>
    <string name="visitorMobile">Visitor Cell No.</string>
    <string name="visitor_email">Visitor Email</string>
    <string name="idphototype">Id Proof Type</string>
    <string name="idproofNo">Id Proof No</string>
    <string name="remarks">Remarks</string>
    <string name="vehiclenoregistrationNo">Vehicle Reg No</string>
    <string name="noOfVisitor">No of Visitors</string>
    <string name="are_you_carry_hardware">Are You Carrying Any Hardware?</string>
    <string name="camera">Camera</string>
    <string name="label_spinner_promt">EN</string>
    <string name="mobileno">Cell No.</string>
    <string name="isd">919</string>
    <string name="mobileNOhint">9987595805</string>
    <string name="email">Visitor Email</string>
    <string name="name">Visitor Name</string>
    <string name="companyAdditionvisitor">Visitor Company</string>
    <string name="stayandmore"><![CDATA[STAY & ADD MORE]]></string>
    <string name="takePhoto">Take Photo</string>
    <string name="emailAddress">darshil@gmail.com</string>
    <string name="balzonion">Blazonion</string>
    <string name="remarksHint">Enter</string>
    <string name="NameHint">Darshil Karla Shah</string>
    <string name="taptoScan">(Tap to scan)</string>
    <string name="take_photo">Take Photo</string>
    <string name="registerImage">Registered Visitor Photo</string>
    <string name="byPassRegisterImage">Bypassed Visitor Photo</string>
    <string name="visitorcomplexName">Complex Name</string>
    <string name="answer">Answer</string>
    <string name="loginId_error">Username Is Required</string>
    <string name="password_error">Password Is Required</string>
    <string name="visitorbuildingName">Tower Name</string>
    <string name="visitortenantName">Tenant Name</string>
    <string name="authentication_error">Authenticarion key Is Required</string>
    <string name="btn_text_multi_visitor">View</string>
    <string name="btn_text_add">ADD</string>
    <string name="error_login_id_required">Username Is Required</string>
    <string name="error_password_required">Password Is Required</string>
    <string name="error_key_required">Authentication key Required</string>
    <string name="error_visitor_name">First Name Required</string>
    <string name="error_last_name">Last Name Required</string>
    <string name="error_company_name">Company Name Required</string>
    <string name="error_person_to_meet">Host Is Required</string>
    <string name="error_tenant_name">Tenant Name Required</string>
    <string name="mobileAlreadyRegister">Visitor With Same Cell Number Is Already Addded</string>
    <string name="usernameDigits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789-_.#</string>
    <string name="tenantDigits"><![CDATA[ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 &(,.)-\'#/\\]]></string>
    <string name="emailDigits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@ .-_</string>
    <string name="companyDigits"><![CDATA[ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 &(,.)-\'#]]></string>
    <string name="visitorNameDigits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 \"\'\"</string>
    <string name="vehicleRegDigits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789-_</string>
    <string name="accessCardDigits"><![CDATA[ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 &#/\\(,.-_)]]></string>
    <string name="questionsDigits"><![CDATA[ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 &\'#/\\(,.-_)]]></string>
    <string name="visitor_name_digits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz \'</string>
    <string name="visitor_vehicle_number">ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789</string>
    <string name="questions">Questions</string>
    <string name="additionalVisitor">Additional Visitor</string>
    <string name="aadharcardvalidationerror">Aadhar Card No Should Be 12 Digits</string>
    <string name="pancarderror">Pan Card No Should Be 10 Digits</string>
    <string name="mintwoDigit">Minimum 2 Digits Required</string>
    <string name="canceldialog">Cancel</string>
    <string name="pick_image_intent_text">Image Picker</string>
    <string name="language_already_selected">Language Already Selected!</string>
    <string name="tenant_name_error">Tenant Name Is Required</string>
    <string name="visitor_entry_successfull">Visitor Entry Saved Successfully</string>
    <string name="enteryourusername">ENTER YOUR USER NAME</string>
    <string name="usernameisrequired">User Name Is Required</string>
    <string name="remove">Remove</string>
    <string name="btnBypass">Bypass</string>
    <string name="error_email">Invalid Email Id</string>
    <string name="error_email_required">Email Id required</string>
    <string name="error_isd_invalid">Invalid ISD</string>
    <string name="error_mobile">Invalid Cell Number</string>
    <string name="hint_visitorEmail">Enter Visitor Email Id</string>
    <string name="select">Select</string>
    <string name="logging">Signing In</string>
    <string name="signing_out">Signing Out</string>
    <string name="please_wait">Please Wait</string>
    <string name="you_dont_have_appointment_today">You Do Not Have Any Appointment Today</string>
    <string name="logged_out_successfully">Logged out Successfully</string>
    <string name="sign_out_successfully">Signed out Successfully</string>
    <string name="not_reception_login">You Are Not Allowed To Sign In</string>
    <string name="fetching_data">Fetching Data</string>
    <string name="registering">Registering</string>
    <string name="uploadingImage">Uploading Images</string>
    <string name="forgot">Forgot Password?</string>
    <string name="technical_error">Techinical Error Occurred. Please Try Again Later</string>
    <string name="walkin_approval_true">Can\'t Add Another Host.</string>
    <string name="change_password">Kindly Change The Password</string>
    <string name="logging_out">Checking Out...</string>
    <string name="printing_pass">Printing Badge</string>
    <string name="update_pass">Update Pass Request</string>
    <string name="visitor_name_required">Visitor Name Is Required</string>
    <string name="error_questions">Please Fill Mandatory Fields</string>
    <string name="invalid_email">Invalid Email Id</string>
    <string name="emailidRequired">Email Id Required</string>
    <string name="two_digits_required">Minimum 2 Digits Required</string>
    <string name="six_digits_reuquired">Minimum 6 Digits Required</string>
    <string name="ten_digits_required">Minimum 10 Digits Required</string>
    <string name="twelve_digits_required">Minimum 12 Digits Required</string>
    <string name="fill_mandatory_questions">Please Fill Mandatory Questions !!</string>
    <string name="error_isd_required">Isd code Is Required</string>
    <string name="mobileInValid">Invalid Cell Number</string>
    <string name="appointmentImage">Appointment Photo</string>
    <string name="no_preappointment_found">No Preappointment Data Found</string>
    <string name="visitor_name_mobile_access_card_no">Visitor Name/Cell/Badge Number</string>
    <string name="no_data_found">No Data Found...</string>
    <string name="visitor_entry_title">Visitor Entry</string>
    <string name="btn_select_building">Select Building</string>
    <string name="btn_visitor_entry_at_complex">Visitor Entry At Complex</string>
    <string name="search_by_vehicle_number">Search By Name/Cell Number/Vehicle Number</string>
</resources>