<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialogue_visitor_entry_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/visitor_entry_title"
        android:textAppearance="@style/customMontserratRegular" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <info.vams.zktecoedu.reception.Util.BuildingSpinner
        android:id="@+id/spnBuilding"
        style="@style/spinner_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_10" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSelectBuilding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dim_10"
            android:background="@color/orange"
            android:padding="@dimen/dim_10"
            android:text="@string/btn_select_building"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textAppearance="@style/customMontserratBold"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnVisitorEntryAtComplex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dim_10"
            android:background="@color/btn_Bypass"
            android:padding="@dimen/dim_10"
            android:text="@string/btn_visitor_entry_at_complex"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textAppearance="@style/customMontserratBold"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>