<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_forgotpasswordActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_toolbar_forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="@dimen/abc_action_bar_default_height_material">

            <ImageView
                android:id="@+id/ivUserLogo_forgotActivity"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_godrejlogo" />

        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_toolbar_forgotpassword"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:background="@color/white"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enteryourusername"
                        android:textAppearance="@style/customMontserratRegular"
                        android:textColor="@color/forgotTextcolor"
                        android:textSize="10sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/dim_60"
                            android:layout_height="@dimen/dim_60"
                            android:padding="14dp"
                            app:srcCompat="@drawable/username" />

                        <EditText
                            android:id="@+id/etforgotpasswordLoginId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:digits="@string/usernameDigits"
                            android:hint="@string/hint_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLength="@integer/email_max_length"
                            android:nextFocusDown="@id/etPassword"
                            android:padding="16dp"
                            android:singleLine="true"
                            android:textAppearance="@style/customMontserratRegular"
                            android:textColor="@color/loginColor" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/view_border_height"
                        android:layout_marginBottom="@dimen/dim_16"
                        android:background="@color/border_color"
                        android:paddingTop="10dp"></View>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"

                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnConfirm_forgotpassword"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/orange"
                            android:text="@string/confirm"
                            android:textAllCaps="true"

                            android:textAppearance="@style/customMontserratSemiBold"
                            android:textColor="@color/white" />

                        <Button
                            android:id="@+id/btnCancel_forgotpassword"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:background="@color/blueColor"
                            android:text="@string/cancel"
                            android:textAllCaps="true"
                            android:textAppearance="@style/customMontserratSemiBold"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>